--- a/index.css
+++ b/index.css
@@ -59,12 +59,15 @@
 
 .lineimg {
     position: absolute;
-    top: 5rem;
+    right: 3.4em;
+    bottom: 2em;
     width: 100%;
     height: 100%;
     object-fit: contain;
     z-index: 1;
+    transform: rotate(60deg);
 }
+ 
 
 
 .timeimg {
