--- a/index.css
+++ b/index.css
@@ -16,7 +16,16 @@
 
 .top-bar p {
     font-size: 0.9rem;
+    
     cursor: pointer;
+}
+
+.consument{
+    color: var(--textcolor-third);
+}
+
+.zakelijk{
+    color: var(--primary-color);
 }
 
 .top-bar img {
@@ -41,6 +50,7 @@
 .nav-bar p {
     position: relative;
     left: 7rem;
+     color: var(--primary-color);
 }
 
 
@@ -49,6 +59,10 @@
     flex-direction: column;
     gap: 2rem;
     padding: 2rem;
+}
+
+.hero-section h1{
+    color: var(--secondary-color);
 }
 
 .hero-image {
@@ -82,6 +96,14 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
+
+.order-list p{
+    color: var(--primary-textcolor);
+}
+
+
+
+
 form{
     display: grid;
     grid-template-columns: 1fr;
@@ -89,26 +111,30 @@ form{
 
 
 .voorkeuren{   
-    background-color: #D83D00;
+    background-color: var(--color-voorkeuren);
 }
 .link-border-voorkeuren{
-    background-color: #C23400;
+    background-color: var(--color-voorkeuren-link);
 }
 
 .wereldwijd{
-    background-color: #6161FF;
+    background-color: var(--color-trace);
 }
 
 .link-border-wereldwijd{
-    background-color: #4E4EE2;
+    background-color: var(--primary-color);
 }
 
 .postzegel{
-background-color: #001A73;
+background-color: var(--secondary-color);
 }
 
 .link-border-postzegel{
-    background-color: #001252;
+    background-color: var(--color-postzegel-link);
+}
+
+.pakketje h3{
+    color: var(--secondary-textcolor);
 }
 
 
