--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,102 +1,127 @@
 @layer styleguide {
 
 
-@font-face {
-    font-family: "abc-rom-bold";
-    src: url(/fonts/ABCROM-Heavy-Trial.otf) format("opentype");
-}
- 
-@font-face {
-    font-family: "abc-rom-regular";
-    src: url(/fonts/ABCROM-Regular-Trial.otf) format("opentype");
-}
+    @font-face {
+        font-family: "abc-rom-bold";
+        src: url(/fonts/ABCROM-Heavy-Trial.otf) format("opentype");
+    }
+
+    @font-face {
+        font-family: "abc-rom-regular";
+        src: url(/fonts/ABCROM-Regular-Trial.otf) format("opentype");
+    }
+
+    @font-face {
+        font-family: "abc-rom-medium";
+        src: url(/fonts/ABCROM-Medium-Trial.otf) format("opentype");
+    }
+
+    @font-face {
+        font-family: "abc-rom-light";
+        src: url(/fonts/ABCROM-Light-Trial.otf) format("opentype");
+    }
+
+    @font-face {
+        font-family: "hanken-bold";
+        src: url(/fonts/HankenGrotesk-Bold.ttf) format("truetype");
+    }
+
+    @font-face {
+        font-family: "hanken-medium";
+        src: url(/fonts/HankenGrotesk-Medium.ttf) format("truetype");
+    }
+
+    @font-face {
+        font-family: "hanken-regular";
+        src: url(/fonts/HankenGrotesk-Regular.ttf) format("truetype");
+    }
 
 
 
-
- :root {
-    /* kleuren */
-    --background-color: #FFFFFF;
-    --background-color-secondary: #F6F5F5;
-    --primary-color: #4E4EE2;
-    --secondary-color: #001A73;
-    --formcolor-bar:#E7E8EB;
-    --primary-textcolor:#A1A1EF;
-    --secondary-textcolor: #E75204;
-    --footercolor: #F1F1F2;
-    --color-voorkeuren: #D83D00;
-    --color-voorkeuren-link:#C23400;
-    --color-trace:#6161FF;
-    --color-postzegel-link: #001252;
-
- 
-
-     /* headings*/
-    --h1-size: 46px;
-    --headingS: 18px;
-    --headingxl: 32px;
-    --headingL: 25px;
-    --headingM: 21px;
+    :root {
+        /* kleuren */
+        --neutral-color-white: #FFFFFF;
+        --background-color-secondary: #F6F5F5;
+        --primary-color: #4E4EE2;
+        --secondary-color: #001A73;
+        --formcolor-bar: #E7E8EB;
+        --primary-textcolor: #A1A1EF;
+        --secondary-textcolor: #E75204;
+        --footercolor: #F1F1F2;
+        --color-voorkeuren: #D83D00;
+        --color-voorkeuren-link: #C23400;
+        --color-trace: #6161FF;
+        --color-postzegel-link: #001252;
 
 
-     
+
+        /* headings*/
+        --h1-size: 46px;
+        --headingS: 18px;
+        --headingxl: 32px;
+        --headingL: 25px;
+        --headingM: 21px;
+        
+        --line-height-160: 160%;
+
+        --font-family-abc-bold: 'abc-rom-bold', sans-serif;
+        --font-family-abc-regular: 'abc-rom-regular', sans-serif;
+        --font-family-abc-medium: 'abc-rom-medium', sans-serif;
+        --font-family-abc-light: 'abc-rom-light', sans-serif;
+        --font-family-hanken-bold: 'hanken-bold', sans-serif;
+        --font-family-hanken-medium: 'hanken-medium', sans-serif;
+        --font-family-hanken-regular: 'hanken-regular', sans-serif;
 
 
- }
- 
-body {
-    --font-family-bold: 'abc-rom-bold', sans-serif;
-    --font-family-regular: 'abc-rom-regular', sans-serif;
-}
- 
-p {
-    font-family: var(--font-family-regular);
-    font-size: 1.125em;
-    line-height: 120%;
-}
 
-/* button */
-    .button1{
-    color: white;
-    font-weight: bold;
-    background-color: #6161FF;
-    border-radius: 5px;
-    border: solid #6161FF 10px ;
-}
+    }
 
-.button2{
-    color: white;
-    font-weight: bold;
-    background-color: #6161FF;
-    border-radius: 5px;
-    border: solid #6161FF 10px ;
-    width: 250px;
-}
 
-.button3{
-    color: #4E4EE2;
-    font-weight: bold;
-    background-color: white;
-    border-radius: 2px;
-    border: solid #4E4EE2 2px ;
-    width: 250px;
-}
 
-/* formelementen*/
-     
-.input1{
-    border: solid lightgrey 2px;
-    border-radius: 2px;
-    width: 300px;
-    height: 27px;
-}
+    
 
-.input2{
-    border: solid lightgrey 2px;
-    border-radius: 2px;
-    width: 150px;
-    height: 27px;
-}
+    /* button */
+    .button1 {
+        color: white;
+        font-weight: bold;
+        background-color: #6161FF;
+        border-radius: 5px;
+        border: solid #6161FF 10px;
+    }
+
+    .button2 {
+        color: white;
+        font-weight: bold;
+        background-color: #6161FF;
+        border-radius: 5px;
+        border: solid #6161FF 10px;
+        width: 250px;
+    }
+
+    .button3 {
+        color: #4E4EE2;
+        font-weight: bold;
+        background-color: white;
+        border-radius: 2px;
+        border: solid #4E4EE2 2px;
+        width: 250px;
+    }
+
+    /* formelementen*/
+
+    .input1 {
+        border: solid lightgrey 2px;
+        border-radius: 2px;
+        width: 300px;
+        height: 27px;
+    }
+
+    .input2 {
+        border: solid lightgrey 2px;
+        border-radius: 2px;
+        width: 150px;
+        height: 27px;
+    }
 
 
 }
