--- a/index.css
+++ b/index.css
@@ -162,6 +162,7 @@ form {
     flex-direction: column;
     padding: 2rem 1.5rem;
     gap: 0.5rem;
+    background-color: var(--background-color-secondary);
 }
 
 form h2 {
@@ -178,6 +179,30 @@ form label {
     margin-top: 0.5rem;
 }
 
+.hidden{
+    display: none;
+}
+
+
+.form-pakketpunt {
+    display: none;
+}
+
+.shown{
+    display: block;
+    animation: disneySlide 1.2s ease-in-out forwards;
+}
+
+@keyframes disneySlide {
+    0% {
+        transform: translateX(-100%);
+    }
+    
+    100% {
+        transform: translateX(0);
+    }
+}
+
 
 .button-zoek {
     color: white;
@@ -185,7 +210,7 @@ form label {
     background-color: #6161FF;
     border-radius: 5px;
     border: solid #6161FF 10px;
-    width: 100%;
+    width: 305px;
 }
 
 .search-bar {
