--- a/stylesheet.css
+++ b/stylesheet.css
@@ -87,6 +87,7 @@
         background-color: #6161FF;
         border-radius: 5px;
         border: solid #6161FF 10px;
+        width: 100px;
     }
 
     .button2 {
