--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,15 +42,15 @@
         /* kleuren */
         --neutral-color-white: #FFFFFF;
         --background-color-secondary: #F6F5F5;
-        --primary-color: #4E4EE2;
+        --primary-color: #2F2FB8;
         --secondary-color: #001A73;
         --formcolor-bar: #E7E8EB;
-        --primary-textcolor: #A1A1EF;
-        --secondary-textcolor: #E75204;
+        --primary-textcolor: #3B3BCC;
+        --secondary-textcolor: #7A2400;
         --footercolor: #F1F1F2;
-        --color-voorkeuren: #D83D00;
-        --color-voorkeuren-link: #C23400;
-        --color-trace: #6161FF;
+        --color-voorkeuren: #8A2500;
+        --color-voorkeuren-link: #9E2A00;
+        --color-trace: #3B3BCC;
         --color-postzegel-link: #001252;
 
 
@@ -84,27 +84,27 @@
     .button1 {
         color: white;
         font-weight: bold;
-        background-color: #6161FF;
+        background-color: #3B3BCC;
         border-radius: 5px;
-        border: solid #6161FF 10px;
+        border: solid #3B3BCC  10px;
         width: 100px;
     }
 
     .button2 {
         color: white;
         font-weight: bold;
-        background-color: #6161FF;
+        background-color: #3B3BCC;
         border-radius: 5px;
-        border: solid #6161FF 10px;
+        border: solid #3B3BCC 10px;
         width: 250px;
     }
 
     .button3 {
-        color: #4E4EE2;
+        color: #2F2FB8;
         font-weight: bold;
         background-color: white;
         border-radius: 2px;
-        border: solid #4E4EE2 2px;
+        border: solid #2F2FB8 2px;
         width: 100%;
         height: 40px;
     }
