--- a/index.css
+++ b/index.css
@@ -112,6 +112,11 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
 
+    @media(min-width:700px){
+        width: 65%;
+        margin: auto;
+    }
+
     li {
         flex: 1;
         display: flex;
@@ -177,6 +182,12 @@ form {
         font-size: 0.875rem;
         color: #333;
         margin-top: 0.5rem;
+    }
+
+    @media(min-width:700px){
+      width: 60%;
+      height: auto;
+      margin: auto;
     }
 }
 
